--- a/AzureADSync.yml
+++ b/AzureADSync.yml
@@ -8,9 +8,9 @@
   
   - name: Copy script
     win_copy:
-      src: /var/scripts/AzureADSync.ps1
-      dest: 'C:\scripts\AzureADSync.ps1'
+      src: /var/scripts/AzureADSync-Delta.ps1
+      dest: 'C:\scripts\AzureADSync-Delta.ps1'
       remote_src: no
 
   - name: Run script to start Azure AD Sync.
-    win_command: powershell.exe -ExecutionPolicy Bypass -File C:/scripts/AzureADSync.ps1
+    win_command: powershell.exe -ExecutionPolicy Bypass -File C:/scripts/AzureADSync-Delta.ps1
